--- a/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
+++ b/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
@@ -12,7 +12,7 @@ function scrollAnimation(options: ScrollAnimationOptions): () => void;
 
 ## Usage
 
-To use with React see: [useScrollAnimation](../../react/usescrollanimation)
+To use with React see: [useScrollAnimation](/api/react/usescrollanimation)
 
 ```ts title="example" frame="terminal"
 import animare from 'animare';
@@ -59,7 +59,7 @@ The root element that has the scrollable area.
 
 The axis to track.
 
-See: [ScrollAxis](../../enums/scrollaxis/)
+See: [ScrollAxis](/api/enums/scrollaxis/)
 
 ### start
 
@@ -67,7 +67,7 @@ See: [ScrollAxis](../../enums/scrollaxis/)
 
 Start the animation when the element edge enters the scroll area.
 
-See: [ScrollElementEdge](../../enums/scrollelementedge/)
+See: [ScrollElementEdge](/api/enums/scrollelementedge/)
 
 ### end
 
@@ -75,7 +75,7 @@ See: [ScrollElementEdge](../../enums/scrollelementedge/)
 
 End the animation when the element edge exits the scroll area.
 
-See: [ScrollElementEdge](../../enums/scrollelementedge/)
+See: [ScrollElementEdge](/api/enums/scrollelementedge/)
 
 ### startOffset
 
