--- a/docs/src/content/docs/API/React/useScrollAnimation.mdx
+++ b/docs/src/content/docs/API/React/useScrollAnimation.mdx
@@ -4,13 +4,13 @@ title: useScrollAnimation
 
 A custom react hook to make it easy to create scroll animations in React.
 
-Based on [scrollAnimation](../../plugins/scrollanimation)
+Based on [scrollAnimation](/api/plugins/scrollanimation)
 
 ```ts wrap title="syntax"
 function useScrollAnimation(options: ScrollAnimationOptions, deps: React.DependencyList = []): void;
 ```
 
-See: [ScrollElementEdge](../../enums/scrollelementedge/), [ScrollAxis](../../enums/scrollaxis/)
+See: [ScrollElementEdge](/api/enums/scrollelementedge/), [ScrollAxis](/api/enums/scrollaxis/)
 
 ## Usage
 
