--- a/docs/src/content/docs/API/Plugins/AutoPause.mdx
+++ b/docs/src/content/docs/API/Plugins/AutoPause.mdx
@@ -18,7 +18,7 @@ Useful when you have an infinite repeating animation to save resources.
 It can be used to auto play the animation when the element becomes visible
 :::
 
-To use with React see: [useAutoPause](../../react/useautopause)
+To use with React see: [useAutoPause](/api/react/useautopause)
 
 ```ts title="example" frame="terminal"
 import animare from 'animare';
