--- a/docs/src/content/docs/API/Plugins/Lerp.mdx
+++ b/docs/src/content/docs/API/Plugins/Lerp.mdx
@@ -12,7 +12,7 @@ function lerp(start: Vec, end: Vec, progress: number): Vec;
 
 ## Usage
 
-See: [VectorToColor](../../plugins/vectortocolor/)
+See: [VectorToColor](/api/plugins/vectortocolor/)
 
 ```ts title="example" frame="terminal"
 import { lerp, vecToRGB } from 'animare/plugins';
