--- a/docs/src/content/docs/API/React/useLoop.mdx
+++ b/docs/src/content/docs/API/React/useLoop.mdx
@@ -8,6 +8,8 @@ A custom react hook to make it easy to create game loops in React.
 function useLoop(onUpdateCallback: (delta: number) => void, deps: React.DependencyList = []): void;
 ```
 
+Based on [Loop](/api/animare/loop)
+
 ## Usage
 
 ```ts title="example" frame="terminal"
