--- a/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
+++ b/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
@@ -59,7 +59,7 @@ The root element that has the scrollable area.
 
 The axis to track.
 
-See: [ScrollAxis](/api/enums/scrollaxis/)
+See: [ScrollAxis](/animare/api/enums/scrollaxis/)
 
 ### start
 
@@ -67,7 +67,7 @@ See: [ScrollAxis](/api/enums/scrollaxis/)
 
 Start the animation when the element edge enters the scroll area.
 
-See: [ScrollElementEdge](/api/enums/scrollelementedge/)
+See: [ScrollElementEdge](/animare/api/enums/scrollelementedge/)
 
 ### end
 
@@ -75,7 +75,7 @@ See: [ScrollElementEdge](/api/enums/scrollelementedge/)
 
 End the animation when the element edge exits the scroll area.
 
-See: [ScrollElementEdge](/api/enums/scrollelementedge/)
+See: [ScrollElementEdge](/animare/api/enums/scrollelementedge/)
 
 ### startOffset
 
