--- a/docs/src/content/docs/API/React/useLoop.mdx
+++ b/docs/src/content/docs/API/React/useLoop.mdx
@@ -8,7 +8,7 @@ A custom react hook to make it easy to create game loops in React.
 function useLoop(onUpdateCallback: (delta: number) => void, deps: React.DependencyList = []): void;
 ```
 
-Based on [Loop](/api/animare/loop)
+Based on [Loop](/animare/api/animare/loop)
 
 ## Usage
 
