--- a/docs/src/content/docs/API/animare/Group.mdx
+++ b/docs/src/content/docs/API/animare/Group.mdx
@@ -49,6 +49,6 @@ myTimeline.play(); // 🚀
 
 ## API
 
-Same as [Timeline](/api/animare/timeline) the only difference is how you pass the animations options.
+Same as [Timeline](/animare/api/animare/timeline) the only difference is how you pass the animations options.
 
 It could be useful for scenarios where animations are dynamically calculated.
