--- a/docs/src/content/docs/API/animare/Loop.mdx
+++ b/docs/src/content/docs/API/animare/Loop.mdx
@@ -22,4 +22,4 @@ const stop = animare.loop(delta => {
 stop(); // stop the loop if needed
 ```
 
-To use with React see: [useLoop](/api/react/useloop)
+To use with React see: [useLoop](/animare/api/react/useloop)
