--- a/docs/src/content/docs/API/objects/AnimationOptions.mdx
+++ b/docs/src/content/docs/API/objects/AnimationOptions.mdx
@@ -59,7 +59,7 @@ A value higher than `playCount` will be ignored.
 
 The direction in which the animation should play.
 
-See: [Direction](/api/enums/direction/)
+See: [Direction](/animare/api/enums/direction/)
 
 ### timing
 
@@ -67,7 +67,7 @@ See: [Direction](/api/enums/direction/)
 
 The position of the animation in the timeline, determining when it should start relative to the timeline.
 
-See: [AnimationTiming](/api/enums/animationtiming/)
+See: [AnimationTiming](/animare/api/enums/animationtiming/)
 
 ### ease
 
@@ -75,4 +75,4 @@ See: [AnimationTiming](/api/enums/animationtiming/)
 
 The easing function for the animation, defining the rate of change of the animated value over time.
 
-See: [Ease](/api/plugins/ease/)
+See: [Ease](/animare/api/plugins/ease/)
