--- a/docs/src/content/docs/API/React/useAutoPause.mdx
+++ b/docs/src/content/docs/API/React/useAutoPause.mdx
@@ -13,7 +13,7 @@ function autoPause(
 ): void;
 ```
 
-Based on [autoPause](/api/plugins/autopause)
+Based on [autoPause](/animare/api/plugins/autopause)
 
 ## Usage
 
