--- a/docs/src/content/docs/API/React/useScrollAnimation.mdx
+++ b/docs/src/content/docs/API/React/useScrollAnimation.mdx
@@ -10,7 +10,7 @@ Based on [scrollAnimation](/api/plugins/scrollanimation)
 function useScrollAnimation(options: ScrollAnimationOptions, deps: React.DependencyList = []): void;
 ```
 
-See: [ScrollElementEdge](/api/enums/scrollelementedge/), [ScrollAxis](/api/enums/scrollaxis/)
+See: [ScrollElementEdge](/animare/api/enums/scrollelementedge/), [ScrollAxis](/animare/api/enums/scrollaxis/)
 
 ## Usage
 
