--- a/docs/src/content/docs/API/Plugins/AutoPause.mdx
+++ b/docs/src/content/docs/API/Plugins/AutoPause.mdx
@@ -1,5 +1,8 @@
 ---
 title: AutoPause
+description: Auto pause/play when the element is enter/leave the viewport.
+sidebar:
+  order: 8
 ---
 
 Uses the IntersectionObserver API to automatically pauses the animation when the element is not visible.
