--- a/docs/src/content/docs/API/Plugins/Ease.mdx
+++ b/docs/src/content/docs/API/Plugins/Ease.mdx
@@ -1,5 +1,8 @@
 ---
 title: Ease
+description: A collection of easing functions.
+sidebar:
+  order: 7
 ---
 
 import { Badge } from '@astrojs/starlight/components';
