--- a/docs/src/content/docs/API/Plugins/Lerp.mdx
+++ b/docs/src/content/docs/API/Plugins/Lerp.mdx
@@ -1,5 +1,8 @@
 ---
 title: Lerp
+description: Linearly interpolates between two values.
+sidebar:
+  order: 10
 ---
 
 import { Badge } from '@astrojs/starlight/components';
