--- a/docs/src/content/docs/API/Plugins/VectorToColor.mdx
+++ b/docs/src/content/docs/API/Plugins/VectorToColor.mdx
@@ -1,5 +1,8 @@
 ---
 title: VectorToColor
+description: A plugin to convert a vector to a color string.
+sidebar:
+  order: 11
 ---
 
 A plugin to convert a vector to a color string.
