--- a/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
+++ b/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
@@ -1,5 +1,8 @@
 ---
 title: scrollAnimation
+description: Makes the scroll progress control the timeline.
+sidebar:
+  order: 9
 ---
 
 import { Badge } from '@astrojs/starlight/components';
