--- a/docs/src/content/docs/API/React/useAnimare.mdx
+++ b/docs/src/content/docs/API/React/useAnimare.mdx
@@ -1,5 +1,8 @@
 ---
 title: useAnimare
+description: A custom react hook to make it easy to create animations in React.
+sidebar:
+  order: 12
 ---
 
 A custom react hook to make it easy to create animations in React.
