--- a/docs/src/content/docs/API/React/useAutoPause.mdx
+++ b/docs/src/content/docs/API/React/useAutoPause.mdx
@@ -1,5 +1,8 @@
 ---
 title: useAutoPause
+description: A custom react hook to make it easy to create auto pause animations in React.
+sidebar:
+  order: 13
 ---
 
 A custom react hook to make it easy to create auto pause animations in React.
