--- a/docs/src/content/docs/API/React/useLoop.mdx
+++ b/docs/src/content/docs/API/React/useLoop.mdx
@@ -1,5 +1,8 @@
 ---
 title: useLoop
+description: A custom react hook to make it easy to create game loops in React.
+sidebar:
+  order: 15
 ---
 
 A custom react hook to make it easy to create game loops in React.
