--- a/docs/src/content/docs/API/React/useScrollAnimation.mdx
+++ b/docs/src/content/docs/API/React/useScrollAnimation.mdx
@@ -1,5 +1,8 @@
 ---
 title: useScrollAnimation
+description: A custom react hook to make it easy to create scroll animations in React.
+sidebar:
+  order: 14
 ---
 
 A custom react hook to make it easy to create scroll animations in React.
