--- a/docs/src/content/docs/API/animare/Group.mdx
+++ b/docs/src/content/docs/API/animare/Group.mdx
@@ -1,6 +1,8 @@
 ---
 title: Group
 description: Create a new timeline by grouping animations.
+sidebar:
+  order: 4
 ---
 
 import { Badge } from '@astrojs/starlight/components';
