--- a/docs/src/content/docs/API/animare/Loop.mdx
+++ b/docs/src/content/docs/API/animare/Loop.mdx
@@ -1,5 +1,8 @@
 ---
 title: Loop
+description: Create a game loop.
+sidebar:
+  order: 6
 ---
 
 import { Badge } from '@astrojs/starlight/components';
