--- a/docs/src/content/docs/API/animare/Single.mdx
+++ b/docs/src/content/docs/API/animare/Single.mdx
@@ -1,5 +1,8 @@
 ---
 title: Single
+description: Create a single animation.
+sidebar:
+  order: 5
 ---
 
 import { Badge } from '@astrojs/starlight/components';
