--- a/docs/src/content/docs/API/animare/Timeline.mdx
+++ b/docs/src/content/docs/API/animare/Timeline.mdx
@@ -1,11 +1,13 @@
 ---
 title: Timeline
-description: Create a new timeline.
+description: Create a new timeline with multiple animations.
+sidebar:
+  order: 3
 ---
 
 import { Badge } from '@astrojs/starlight/components';
 
-Create a new timeline.
+Create a new timeline with multiple animations.
 
 ```ts title="syntax"
 function animare.timeline(
