--- a/docs/src/content/docs/API/enums/AnimationTiming.mdx
+++ b/docs/src/content/docs/API/enums/AnimationTiming.mdx
@@ -1,6 +1,9 @@
 ---
 title: AnimationTiming
+description: The position of the animation in the timeline, determining when it should start relative to the timeline.
 ---
+
+The position of the animation in the timeline, determining when it should start relative to the timeline.
 
 ### AfterPrevious
 
