--- a/docs/src/content/docs/API/enums/Direction.mdx
+++ b/docs/src/content/docs/API/enums/Direction.mdx
@@ -1,6 +1,9 @@
 ---
 title: Direction
+description: The direction in which the animation should play.
 ---
+
+The direction in which the animation should play.
 
 ### Forward
 
