--- a/docs/src/content/docs/API/enums/Event.mdx
+++ b/docs/src/content/docs/API/enums/Event.mdx
@@ -1,6 +1,9 @@
 ---
 title: Event
+description: The events that can be triggered by the timeline.
 ---
+
+The events that can be triggered by the timeline.
 
 ### Play
 
