--- a/docs/src/content/docs/API/enums/ScrollElementEdge.mdx
+++ b/docs/src/content/docs/API/enums/ScrollElementEdge.mdx
@@ -1,6 +1,9 @@
 ---
 title: ScrollElementEdge
+description: The edge of the element to track.
 ---
+
+The edge of the element to track.
 
 ### Top
 
