--- a/docs/src/content/docs/API/objects/AnimationOptions.mdx
+++ b/docs/src/content/docs/API/objects/AnimationOptions.mdx
@@ -1,5 +1,8 @@
 ---
 title: AnimationOptions
+description: Options for creating an animation.
+sidebar:
+    order: 16
 ---
 
 import { Badge } from '@astrojs/starlight/components';
