--- a/docs/src/content/docs/API/objects/TimelineInfo.mdx
+++ b/docs/src/content/docs/API/objects/TimelineInfo.mdx
@@ -1,5 +1,8 @@
 ---
 title: TimelineInfo
+description: Information about the timeline.
+sidebar:
+    order: 20
 ---
 
 import { Badge } from '@astrojs/starlight/components';
