--- a/docs/src/content/docs/API/objects/TimelineObject.mdx
+++ b/docs/src/content/docs/API/objects/TimelineObject.mdx
@@ -1,5 +1,8 @@
 ---
 title: TimelineObject
+description: The return object when creating a new timeline.
+sidebar:
+  order: 18
 ---
 
 import { Badge } from '@astrojs/starlight/components';
