--- a/docs/src/content/docs/API/objects/TimelineOptions.mdx
+++ b/docs/src/content/docs/API/objects/TimelineOptions.mdx
@@ -1,5 +1,8 @@
 ---
 title: TimelineOptions
+description: Options for creating a new timeline.
+sidebar:
+  order: 17
 ---
 
 import { Badge } from '@astrojs/starlight/components';
