--- a/docs/src/content/docs/usage.mdx
+++ b/docs/src/content/docs/usage.mdx
@@ -1,9 +1,11 @@
 ---
 title: Usage
 description: A guide for using animare.
+sidebar:
+  order: 2
 ---
 
-```ts 
+```ts
 import animare, { ease } from 'animare';
 
 const element = document.getElementById('element');
@@ -24,6 +26,6 @@ animare(
     if (isFinished) {
       // do something when the animation is finished
     }
-  }
+  },
 );
 ```
