--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,43 +1,28 @@
 ---
-title: Home
+title: Welcome to animare
 description: Get started building your docs site with Starlight.
 template: splash
-sidebar:
-  hidden: true
-
+pagefind: false
+prev: false
+next: false
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Add motion to your apps with ease.
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: ./installation/
+    - text: Docs
+      link: /animare/installation
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-import Ease from '../../components/Ease/Ease';
-
-## Next steps
-
-<Ease client:visible easing={'ease.in.back(0)'} />
-
 <CardGrid stagger>
-  <Card title='Update content' icon='pencil'>
-    Edit `src/content/docs/index.mdx` to see this page change.
+  <Card title='Light' icon='seti:salesforce'>
+    Advanced animation library for modern JavaScript.
   </Card>
-  <Card title='Add new content' icon='add-document'>
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
-  </Card>
-  <Card title='Configure your site' icon='setting'>
-    Edit your `sidebar` and other config in `astro.config.mjs`.
-  </Card>
-  <Card title='Read the docs' icon='open-book'>
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
+  <Card title='Modern' icon='seti:crystal_embedded'>
+    Based on `requestAnimationFrame`
   </Card>
 </CardGrid>
