--- a/docs/src/content/docs/installation.mdx
+++ b/docs/src/content/docs/installation.mdx
@@ -1,33 +1,17 @@
 ---
 title: Installation
 description: A guide for installing animare.
+sidebar:
+  order: 1
 ---
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
+import { PackageManagers } from 'starlight-package-managers';
 
 Install using your package manager of choice to add animare to your project:
 
-<Tabs>
-    <TabItem label='npm'>
-      ```bash frame="none"
-      npm install animare 
-      ```
-    </TabItem>
+<PackageManagers pkg='animare' frame='none' />
 
-    <TabItem label='pnpm'>
-      ```bash frame="none"
-      pnpm add animare
-      ```
-    </TabItem>
-
-    <TabItem label='yarn'>
-      ```bash frame="none"
-      yarn add animare
-      ```
-    </TabItem>
-
-</Tabs>
-
-<br/>
+<br />
 
 Aaaaand, you’re done! That was fast. 🐇
