--- a/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
+++ b/docs/src/content/docs/API/Plugins/scrollAnimation.mdx
@@ -44,6 +44,8 @@ unsubscribe(); // Removes the scroll event listener
 
 The returned animation object.
 
+See: [TimelineObject](/animare/api/objects/timelineobject/)
+
 ### element
 
 `element: HTMLElement` <Badge text="Required" variant="note" size="small" />
