--- a/docs/src/content/docs/API/enums/Timing.mdx
+++ b/docs/src/content/docs/API/enums/Timing.mdx
@@ -1,5 +1,5 @@
 ---
-title: AnimationTiming
+title: Timing
 description: For determining the position of the animation in the timeline.
 ---
 
@@ -7,18 +7,18 @@ For determining the position of the animation in the timeline.
 
 ### AfterPrevious
 
-`AnimationTiming.AfterPrevious`
+`Timing.AfterPrevious`
 
 Play the animation after the previous one finishes.
 
 ### WithPrevious
 
-`AnimationTiming.WithPrevious`
+`Timing.WithPrevious`
 
 Play the animation simultaneously with the previous one.
 
 ### FromStart
 
-`AnimationTiming.FromStart`
+`Timing.FromStart`
 
 Play the animation from the start of the timeline.
