--- a/docs/src/content/docs/API/Plugins/Ease.mdx
+++ b/docs/src/content/docs/API/Plugins/Ease.mdx
@@ -178,7 +178,7 @@ Creates a staircase easing function.
 
 ## CubicBezier()
 
-`ease.cubicBezier(mX1: number, mY1: number, mX2: number, mY2: number)`
+`ease.cubicBezier(x1: number, y1: number, x2: number, y2: number)`
 
 Defines a [cubic Bézier curve](https://developer.mozilla.org/en-US/docs/Glossary/Bezier_curve),
 similar to CSS's **cubic-bezier** easing function.
