--- a/docs/src/content/docs/API/objects/AnimationOptions.mdx
+++ b/docs/src/content/docs/API/objects/AnimationOptions.mdx
@@ -31,12 +31,18 @@ The starting value of the animation.
 
 The duration of the animation in milliseconds.
 
-### delay (offest)
+### offset
+
+`offset?: number | (index: number) => number` <Badge text="Default: 0" variant="tip" size="small" />
+
+Offsets the animation by a specific value in milliseconds.
+a positive value will act like a delay, while a negative value will play the animation earlier.
+
+### delay
 
 `delay?: number | (index: number) => number` <Badge text="Default: 0" variant="tip" size="small" />
 
-This property specifies the delay before the animation starts, in milliseconds, and can accept negative values.
-It acts as an animation offset within the timeline, allowing you to delay the animation or make it start earlier by using negative values.
+This property specifies the delay before the animation starts, in milliseconds.
 
 ### playCount
 
