--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome to
-description: Get started building your docs site with Starlight.
+title: Welcome to animare
+description: Advanced animation library for modern JavaScript..
 template: splash
 pagefind: false
 prev: false
@@ -10,16 +10,6 @@ sidebar:
   label: Home
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
 import Hero from '../../components/Hero.astro';
 
 <Hero />
-
-<CardGrid >
-  <Card title='Light' icon='seti:salesforce'>
-    Advanced animation library for modern JavaScript.
-  </Card>
-  <Card title='Modern' icon='seti:crystal_embedded'>
-    Based on `requestAnimationFrame`
-  </Card>
-</CardGrid>
