--- a/docs/src/content/docs/API/Guids/ReuseAnimatedValue.mdx
+++ b/docs/src/content/docs/API/Guids/ReuseAnimatedValue.mdx
@@ -2,42 +2,52 @@
 title: Reuse Animated Value
 ---
 
+import Example from '../../../../components/Examples/ReuseValues';
+
 The fewer animations in the timeline, the better the performance. When animating multiple CSS properties with the same duration and start time, you don't need to create a new animation for each property.
 
 - Ensure that you animate from `0` to `1`, as this range represents the progress.
 - Use [`info.value`](/animare/api/objects/animationinfo#value) instead of [`info.progress`](/animare/api/objects/animationinfo#progress) because [`info.value`](/animare/api/objects/animationinfo#value) accounts for the animation [`direction`](/animare/api/objects/animationoptions#direction) , whereas [`info.progress`](/animare/api/objects/animationinfo#progress) does not.
 - Do not pass an easing function; leave it as the default so you can assign one to each css property.
 
+<Example client:idle />
+
 ```ts title="example" frame="terminal"
-import animare, { Direction } from 'animare';
-import { lerp, vecToRGB, ease } from 'animare/plugins';
+import animare from 'animare';
+import { lerp, ease } from 'animare/plugins';
 import type { AnimationGroupOptions } from 'animare';
 
-const elements = document.querySelectorAll<HTMLDivElement>('.elements');
+const letters = document.querySelectorAll<HTMLSpanElement>('.letters');
 
 const animations: AnimationGroupOptions = {
-  to: Array<number>(elements.length).fill(1), // create an animation for each element
-  duration: 1000, // for each animation
-  direction: Direction.Alternate,
+  to: Array<number>(letters.length).fill(1), // create an animation for each element
+  // offset each animation except the first one to play early by 300ms
+  offset: i => (i === 0 ? 0 : -300),
+  duration: 500, // for each animation
 };
 
 animare.group(animations, info => {
-  for (let i = 0; i < elements.length; i++) {
-    const el = elements[i];
-    if (!el) return;
+  for (let i = 0; i < letters.length; i++) {
+    const letter = letters[i];
+    if (!letter) return;
 
-    const t = info.value[i]; // represents the progress of the animation
+    // represents the progress of the animation
+    const t = info[i].value;
 
     // opacity
-    el.style.opacity = ease.out.quad(t).toString();
+    letter.style.opacity = t.toString();
+
+    // blur
+    const blur = lerp(3, 0, t);
+    letter.style.filter = `blur(${blur}px)`;
 
     // rotate
-    const rotate = lerp(90, 0, ease.out.bounce(t));
-    el.style.transform = `rotate(${rotate}deg)`;
+    const rotate = lerp(i % 2 === 0 ? 90 : -90, 0, ease.out.back(5)(t));
+    letter.style.rotate = `${rotate}deg`;
 
-    // background color
-    const interpolatedColor = lerp([255, 0, 0], [0, 255, 0], ease.out.expo(t));
-    el.style.backgroundColor = vecToRGB(interpolatedColor);
+    // scale
+    const scale = lerp(2, 1, ease.in.wobble(1.6)(t));
+    letter.style.scale = `${scale}`;
   }
 });
 ```
