--- a/docs/src/content/docs/API/enums/Direction.mdx
+++ b/docs/src/content/docs/API/enums/Direction.mdx
@@ -3,7 +3,13 @@ title: Direction
 description: The direction in which the animation should play.
 ---
 
+import DirectionsExample from '../../../../components/Examples/DirectionsExample';
+
 The direction in which the animation should play.
+
+In the following example, all animations have the same `from` and `to` values but they play in different directions.
+
+<DirectionsExample client:idle />
 
 ### Forward
 
