--- a/docs/src/content/docs/API/enums/Timing.mdx
+++ b/docs/src/content/docs/API/enums/Timing.mdx
@@ -3,7 +3,11 @@ title: Timing
 description: For determining the position of the animation in the timeline.
 ---
 
+import TimingExample from '../../../../components/Examples/TimingExample';
+
 For determining the position of the animation in the timeline.
+
+<TimingExample client:idle />
 
 ### AfterPrevious
 
