--- a/docs/src/content/docs/API/animare/Group.mdx
+++ b/docs/src/content/docs/API/animare/Group.mdx
@@ -13,7 +13,7 @@ Create a new timeline by grouping animations.
 function animare.timeline(
   animations: AnimationGroupOptions,
   onUpdateCallback: GroupOnUpdateCallback,
-): TimelineObject;
+): GroupTimelineObject;
 ```
 
 ## Usage
