--- a/docs/src/content/docs/API/objects/TimelineObject.mdx
+++ b/docs/src/content/docs/API/objects/TimelineObject.mdx
@@ -120,7 +120,7 @@ timeline.seek('50%', 2); // Seek to 50% of the timeline duration on the second r
 
 ### updateValues()
 
-`(newValues: AnimationOptions[]) => void` <Badge text="Throws" variant="danger" size="small" />
+`(newValues: Partial<AnimationOptions>[]) => void` <Badge text="Throws" variant="danger" size="small" />
 
 Updates animations values. <br/>
 The `name` property is **required** to target a specific animation for updating.
