--- a/docs/src/content/docs/API/animare/Single.mdx
+++ b/docs/src/content/docs/API/animare/Single.mdx
@@ -57,12 +57,10 @@ See: [AnimationOptions](/animare/api/objects/animationoptions/)
 
 ## OnUpdateCallback
 
-`(AnimationInfo, TimelineInfo) => void` <Badge text="Required" variant="note" size="small" />
+`(AnimationInfo) => void` <Badge text="Required" variant="note" size="small" />
 
 This is a callback function that is called on every frame update
-with `CallbackInfo`, and [`TimelineInfo`](/animare/api/objects/timelineinfo) as arguments.
-
-### CallbackInfo
+with `AnimationInfo`.
 
 See: [AnimationInfo](/animare/api/objects/animationinfo)
 
