--- a/docs/src/content/docs/API/Guids/AnimateColor.mdx
+++ b/docs/src/content/docs/API/Guids/AnimateColor.mdx
@@ -7,7 +7,7 @@ import Example from '../../../../components/Examples/AnimateColor';
 Here's a simple example demonstrating how to animate colors in Animare:
 
 - Ensure that you animate from `0` to `1`, as this range will be used to represent progress.
-- Use [`info.value`](/animare/api/objects/animationinfo#value) instead of [`info.progress`](/animare/api/objects/animationinfo#progress) because [`info.value`](/animare/api/objects/animationinfo#value) accounts for the animation [`direction`](/animare/api/objects/animationoptions#direction) , whereas [`info.progress`](/animare/api/objects/animationinfo#progress) does not.
+- Use [`AnimationInfo.value`](/animare/api/objects/animationinfo#value) instead of [`AnimationInfo.progress`](/animare/api/objects/animationinfo#progress) because [`AnimationInfo.value`](/animare/api/objects/animationinfo#value) accounts for the animation [`direction`](/animare/api/objects/animationoptions#direction) , whereas [`AnimationInfo.progress`](/animare/api/objects/animationinfo#progress) does not.
 
 <Example client:idle />
 
